package ViewsAndTimelines;

public enum TimeDisplayMode {
    World, RealmLocal, Both
}
