@startuml

class UI.InventoryUI {
- {static} Page page
+ {static} void manageInventory(Character)
- {static} int printAndQueryInventory(Character)
- {static} int printAndQueryInventory(Character,String)
- {static} void selectInventory(Character)
- {static} void displayItem(Item)
+ {static} void removeItem(Character)
- {static} void addItems(Character)
+ {static} Item addItem(Character)
}


enum VisibilityAndSharing.VisibilityType {
+  PUBLIC
+  PRIVATE
}

enum VisibilityAndSharing.PermissionLevel {
+  VIEW_ONLY
+  COLLABORATIVE
}

abstract class VisibilityAndSharing.ThemeType {
}
class UI.WorldTimeUI {
- {static} Page page
+ {static} WorldTime createTime()
}


class RPGDomain.Inventory {
- List<Item> items
~ void addItem(Item)
~ void removeItem(Item)
}


class RealmAndTime.WorldTime {
- long totalMinutes
+ void addMinutes(long)
+ long toDays()
+ long toHours()
+ int compareTo(WorldTime)
+ String toString()
}


class RPGDomain.Item {
- UUID itemId
- String name
- String desc
- String rarity
}


class Core.UserSettings {
- Realm currentRealm
- ThemeType theme
- TimeDisplayMode timeDisplayMode
+ void updateTheme(ThemeType)
+ void updateTimeDisplay(TimeDisplayMode)
+ void updateCurrentRealm(Realm)
}


class UI.CharacterUI {
- {static} Page page
+ {static} void displayOptions(User)
+ {static} Character createCharacter(User)
- {static} void editCharacter(User)
- {static} void renameCharacter(Character)
+ {static} void removeCharacter(User)
+ {static} Character chooseCharacter(User)
+ {static} Character chooseCharacter(QuestEvent)
}


class Core.QuestEvent {
- UUID eventId
- String title
- WorldTime startTime
- WorldTime endTime
- Realm realm
- List<Character> participants
- List<InventoryEffect> inventoryEffects
- List<User> sharedWith
+ void updateTimes(WorldTime,WorldTime)
+ void updateRealm(Realm)
+ void addParticipant(Character)
}


enum RPGDomain.EffectType {
+  GRANT
+  REMOVE
}

class UI.QuestEventUI {
- {static} Page page
+ {static} QuestEvent chooseQuestEvent(Campaign)
+ {static} QuestEvent chooseQuestEvent(Campaign,boolean)
+ {static} void updateQuestEvent(Campaign)
+ {static} QuestEvent createQuestEvent(Campaign)
+ {static} void removeQuestEvent(Campaign)
- {static} void updateTitle(QuestEvent)
- {static} void updateTimesUI(QuestEvent)
- {static} void setStartTime(QuestEvent)
- {static} void setEndTime(QuestEvent)
- {static} void updateRealm(QuestEvent)
- {static} void addCharacter(QuestEvent,Campaign)
- {static} void removeCharacters(QuestEvent,Campaign)
- {static} void rewardCharacter(QuestEvent,Campaign)
- {static} void punishCharacter(QuestEvent)
+ {static} String timelineString(Campaign)
}


class RPGDomain.InventoryEffect {
- Item item
- int quantity
- EffectType effectType
+ void apply(Character)
}


class ViewsAndTimelines.DayView {
+ void display()
}

class Core.Campaign {
- UUID campaignId
- String name
- User owner
- VisibilityType visibility
- List<QuestEvent> questEvents
- Map<User,PermissionLevel> sharedWith
- boolean archived
+ void addEvent(QuestEvent)
+ void removeEvent(UUID)
+ void updateEvent(QuestEvent)
}


class UI.RealmUI {
- {static} Page page
+ {static} Realm createRealm()
}


class Engine {
- {static} Scanner scanner
+ {static} void main(String[])
}


class ViewsAndTimelines.WeekView {
+ void display()
}

class UI.UserUI {
+ {static} Page page
- {static} Map<String,User> allUsers
+ {static} void getUser()
+ {static} User login()
- {static} void characterManager(User)
- {static} User createUserUI()
- {static} User accessUser()
- {static} void openSettings()
- {static} void createCampaign(User)
- {static} void updateCampaign(User)
- {static} void removeCampaign(User)
+ {static} void displayOptions(User)
- {static} void viewCampaign(User)
- {static} void editCampaign(User)
}


class RPGDomain.Character {
- UUID characterId
- String name
- String characterClass
- int level
- Inventory inventory
+ void levelUp()
+ void giveItem(Item)
+ void takeItem(Item)
}


enum ViewsAndTimelines.TimeDisplayMode {
+  World
+  RealmLocal
+  Both
}

class ViewsAndTimelines.Page {
- {static} Scanner scanner
- StringBuilder str
+ void addToPage(String)
+ void print(T)
+ String acceptStr(String)
+ String acceptStrWithValidation(String)
+ void nextScreen()
+ int acceptIntUntil(String,int)
+ {static} String dynamicPrompt(String,String)
}


class RealmAndTime.Realm {
- UUID realmId
- String name
- String description
- int timeOffsetMinutes
+ LocalTime convertFromWorldTime(WorldTime)
+ String toString()
}


abstract class ViewsAndTimelines.TimelineView {
- Campaign campaign
+ {abstract}void display()
}


class UI.CampaignUI {
- {static} Page page
+ {static} Campaign createCampaign(User)
+ {static} Campaign chooseCampaign(User)
+ {static} Campaign chooseCampaign(User,boolean)
+ {static} void updateCampaign(User)
- {static} void updateName(Campaign)
- {static} void visibilityUI(Campaign)
- {static} void archiveCampaign(Campaign)
- {static} void shareWithOther(User)
- {static} void addQuestEvent(Campaign)
- {static} void updateQuestEvent(Campaign)
- {static} void removeQuestEvent(Campaign)
+ {static} void viewCampaign(Campaign)
}


class ViewsAndTimelines.YearView {
+ void display()
}

class ViewsAndTimelines.MonthView {
+ void display()
}

class Core.User {
- {static} Map<String,User> allUsers
- UUID userId
- String username
- List<Campaign> campaigns
- List<RPGDomain.Character> characters
- UserSettings settings
- {static} Page page
+ {static} User createUser(String)
+ void addCharacter(Character)
+ void addCampaign(Campaign)
+ void removeCampaign(Campaign)
}


class RealmAndTime.LocalTime {
+ int day
+ int hour
+ int minute
}

User *-- UserSettings
User o-- Campaign
User *-- Character

UserSettings o-- Realm
UserSettings *-- ThemeType
UserSettings *-- TimeDisplayMode

Campaign o-- User
Campaign *-- VisibilityType
Campaign *-- QuestEvent
Campaign *-- PermissionLevel

QuestEvent o-- WorldTime
QuestEvent *-- Realm
QuestEvent o-- Character
QuestEvent *-- InventoryEffect
QuestEvent o-- User

Realm <.. LocalTime

Character *-- Inventory
Inventory *-- Item
InventoryEffect *-- EffectType

TimelineView o-- Campaign

CampaignUI *-- Page
CharacterUI *-- Page
InventoryUI *-- Page
QuestEventUI *-- Page
RealmUI *-- Page
UserUI *-- Page
WorldTimeUI *-- Page

UserUI --> User
CampaignUI --> Campaign
QuestEventUI --> QuestEvent
CharacterUI --> Character
InventoryUI --> Inventory
WorldTimeUI --> WorldTime
RealmUI --> Realm

UserUI -right-> CampaignUI
UserUI --> CharacterUI
CampaignUI --> QuestEventUI
QuestEventUI -right-> CharacterUI
QuestEventUI --> InventoryUI
CharacterUI --> InventoryUI

Engine --> UserUI

RealmAndTime.Comparable <|.. RealmAndTime.WorldTime
ViewsAndTimelines.TimelineView <|-- ViewsAndTimelines.DayView
ViewsAndTimelines.TimelineView <|-- ViewsAndTimelines.WeekView
ViewsAndTimelines.TimelineView <|-- ViewsAndTimelines.YearView
ViewsAndTimelines.TimelineView <|-- ViewsAndTimelines.MonthView
@enduml